# media-object

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  WIRE.md
.github/workflows/: ci.yml
src/: control.rs  error.rs  lib.rs  model.rs  wire.rs
tests/: media_control_v1.rs  media_object_v1.rs
tests/fixtures/media-control/v1/: media-authorization-fact-with-subject.json  media-authorization-request-with-relay-key.json  media-capability-expired.json  media-capability-future-version.json  media-capability-noncanonical-edge-order.json  media-capability-wrong-session.json  media-endpoint-descriptor-with-secret.json  media-endpoint-descriptor.json  media-frame-configuration.json  media-frame-envelope.json  session-media-identity-talkback-with-source.json  session-media-identity.json
